line_det/logs/lane_states/build.make.010.log
[35m[1mScanning dependencies of target lane_states_node
[0m[100%] [32mBuilding CXX object CMakeFiles/lane_states_node.dir/lane_states_node.cpp.o
In file included from /opt/ros/indigo/include/ros/ros.h:40:0,
                 from /home/eduardo/Robotica/AutoNOMOS2/line_det/src/lane_states/lane_states_node.cpp:1:
/home/eduardo/Robotica/AutoNOMOS2/line_det/src/lane_states/lane_states_node.cpp: In function ‘int main(int, char**)’:
/home/eduardo/Robotica/AutoNOMOS2/line_det/src/lane_states/lane_states_node.cpp:166:22: error: ‘endl’ was not declared in this scope
      ROS_INFO_STREAM(endl << "Histograma: " << p);
                      ^
/opt/ros/indigo/include/ros/console.h:352:64: note: in definition of macro ‘ROSCONSOLE_PRINT_STREAM_AT_LOCATION_WITH_FILTER’
     __rosconsole_print_stream_at_location_with_filter__ss__ << args; \
                                                                ^
/opt/ros/indigo/include/ros/console.h:394:7: note: in expansion of macro ‘ROSCONSOLE_PRINT_STREAM_AT_LOCATION’
       ROSCONSOLE_PRINT_STREAM_AT_LOCATION(args); \
       ^
/opt/ros/indigo/include/ros/console.h:564:43: note: in expansion of macro ‘ROS_LOG_STREAM_COND’
 #define ROS_LOG_STREAM(level, name, args) ROS_LOG_STREAM_COND(true, level, name, args)
                                           ^
/opt/ros/indigo/include/rosconsole/macros_generated.h:111:31: note: in expansion of macro ‘ROS_LOG_STREAM’
 #define ROS_INFO_STREAM(args) ROS_LOG_STREAM(::ros::console::levels::Info, ROSCONSOLE_DEFAULT_NAME, args)
                               ^
/home/eduardo/Robotica/AutoNOMOS2/line_det/src/lane_states/lane_states_node.cpp:166:6: note: in expansion of macro ‘ROS_INFO_STREAM’
      ROS_INFO_STREAM(endl << "Histograma: " << p);
      ^
/home/eduardo/Robotica/AutoNOMOS2/line_det/src/lane_states/lane_states_node.cpp:166:22: note: suggested alternative:
      ROS_INFO_STREAM(endl << "Histograma: " << p);
                      ^
/opt/ros/indigo/include/ros/console.h:352:64: note: in definition of macro ‘ROSCONSOLE_PRINT_STREAM_AT_LOCATION_WITH_FILTER’
     __rosconsole_print_stream_at_location_with_filter__ss__ << args; \
                                                                ^
/opt/ros/indigo/include/ros/console.h:394:7: note: in expansion of macro ‘ROSCONSOLE_PRINT_STREAM_AT_LOCATION’
       ROSCONSOLE_PRINT_STREAM_AT_LOCATION(args); \
       ^
/opt/ros/indigo/include/ros/console.h:564:43: note: in expansion of macro ‘ROS_LOG_STREAM_COND’
 #define ROS_LOG_STREAM(level, name, args) ROS_LOG_STREAM_COND(true, level, name, args)
                                           ^
/opt/ros/indigo/include/rosconsole/macros_generated.h:111:31: note: in expansion of macro ‘ROS_LOG_STREAM’
 #define ROS_INFO_STREAM(args) ROS_LOG_STREAM(::ros::console::levels::Info, ROSCONSOLE_DEFAULT_NAME, args)
                               ^
/home/eduardo/Robotica/AutoNOMOS2/line_det/src/lane_states/lane_states_node.cpp:166:6: note: in expansion of macro ‘ROS_INFO_STREAM’
      ROS_INFO_STREAM(endl << "Histograma: " << p);
      ^
In file included from /usr/include/c++/4.8/iostream:39:0,
                 from /opt/ros/indigo/include/ros/time.h:54,
                 from /opt/ros/indigo/include/ros/ros.h:38,
                 from /home/eduardo/Robotica/AutoNOMOS2/line_det/src/lane_states/lane_states_node.cpp:1:
/usr/include/c++/4.8/ostream:564:5: note:   ‘std::endl’
     endl(basic_ostream<_CharT, _Traits>& __os)
     ^
make[2]: *** [CMakeFiles/lane_states_node.dir/lane_states_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/lane_states_node.dir/all] Error 2
make: *** [all] Error 2
